[gd_scene load_steps=8 format=3 uid="uid://4gf5qcq6dfva"]

[ext_resource type="PackedScene" uid="uid://b0exb28ywc2d6" path="res://holder.tscn" id="1_316ti"]
[ext_resource type="Script" path="res://hud.gd" id="1_dj65v"]
[ext_resource type="Texture2D" uid="uid://leh0tm5gkb6p" path="res://Imgs/diamante1.png" id="3_6fxho"]
[ext_resource type="Material" uid="uid://dosn66orqwctd" path="res://outLine.tres" id="3_o7cq6"]
[ext_resource type="Texture2D" uid="uid://dem4u5q0bgrs2" path="res://Imgs/diamante2.png" id="4_l0cb7"]
[ext_resource type="Texture2D" uid="uid://kom41nfu610" path="res://Imgs/ferro1.png" id="5_18hrr"]
[ext_resource type="Texture2D" uid="uid://b71ur4b3nnd58" path="res://Imgs/ferro2.png" id="6_5qmah"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_dj65v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 944.0
offset_top = 264.0
offset_right = -48.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Holder" parent="VBoxContainer" instance=ExtResource("1_316ti")]
layout_mode = 2

[node name="Icon" parent="VBoxContainer/Holder" index="0"]
material = ExtResource("3_o7cq6")
offset_left = -27.0
offset_top = -19.0
offset_right = 51.0
offset_bottom = 47.0
texture = ExtResource("3_6fxho")

[node name="User" parent="VBoxContainer/Holder" index="1"]
offset_top = -22.0
offset_right = 172.0
offset_bottom = 22.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 26
text = "Larissa
"

[node name="Saldo" parent="VBoxContainer/Holder" index="2"]
offset_top = 12.0
offset_right = 212.0
offset_bottom = 56.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 26
text = "R$ 200,00
"

[node name="Holder2" parent="VBoxContainer" instance=ExtResource("1_316ti")]
layout_mode = 2

[node name="Icon" parent="VBoxContainer/Holder2" index="0"]
material = ExtResource("3_o7cq6")
offset_left = -27.0
offset_top = -19.0
offset_right = 51.0
offset_bottom = 47.0
texture = ExtResource("4_l0cb7")

[node name="User" parent="VBoxContainer/Holder2" index="1"]
offset_top = -22.0
offset_right = 152.0
offset_bottom = 22.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 26
text = "Paulo"

[node name="Saldo" parent="VBoxContainer/Holder2" index="2"]
offset_top = 12.0
offset_right = 194.0
offset_bottom = 56.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 26
text = "R$ 50,00
"

[node name="Holder3" parent="VBoxContainer" instance=ExtResource("1_316ti")]
layout_mode = 2

[node name="Icon" parent="VBoxContainer/Holder3" index="0"]
material = ExtResource("3_o7cq6")
offset_left = -27.0
offset_top = -20.0
offset_right = 51.0
offset_bottom = 46.0
texture = ExtResource("5_18hrr")

[node name="User" parent="VBoxContainer/Holder3" index="1"]
offset_top = -22.0
offset_right = 175.0
offset_bottom = 22.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 26
text = "Nat√°lia"

[node name="Saldo" parent="VBoxContainer/Holder3" index="2"]
offset_top = 12.0
offset_right = 230.0
offset_bottom = 56.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 26
text = "R$ 3000,00
"

[node name="Holder4" parent="VBoxContainer" instance=ExtResource("1_316ti")]
layout_mode = 2

[node name="Icon" parent="VBoxContainer/Holder4" index="0"]
material = ExtResource("3_o7cq6")
offset_left = -27.0
offset_top = -21.0
offset_right = 51.0
offset_bottom = 45.0
texture = ExtResource("6_5qmah")

[node name="User" parent="VBoxContainer/Holder4" index="1"]
offset_top = -22.0
offset_right = 166.0
offset_bottom = 22.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 26
text = "Murilo"

[node name="Saldo" parent="VBoxContainer/Holder4" index="2"]
offset_top = 12.0
offset_right = 230.0
offset_bottom = 56.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 26
text = "R$ 1500,00"

[editable path="VBoxContainer/Holder"]
[editable path="VBoxContainer/Holder2"]
[editable path="VBoxContainer/Holder3"]
[editable path="VBoxContainer/Holder4"]
